--- a/lobks/src/styles/UserPanel.css
+++ b/lobks/src/styles/UserPanel.css
@@ -1,6 +1,17 @@
 .user-panel > h1 {
     text-align: center;
 }
+select:focus {
+    outline: none;
+}
+select {
+    border-radius: 10px;
+    background-color: inherit;
+    text-align: center;
+}
+.list-panel > h1 {
+    text-align: center;
+}
 .searchbar {
     width: 75%;
 }
@@ -8,13 +19,14 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    width:5%;
+    width: 5%;
     height: 20%;
     margin: 0 0 10px 10px;
     padding: 10px;
 }
 .user-add-to-list-button {
     text-align: center;
+    margin-bottom: 5px;
 }
 table {
     text-align: center;
